--- a/index.html
+++ b/index.html
@@ -3,8 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Calcultator</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
+    <main>
+        <div id="calculator">
 
+        </div>
+    </main>
+    <footer>
+        <p>2024 Copyright by <a href="https://www.fmpberger.com">fmpberger</a></p>
+    </footer>
 </body>
 </html>
