adding buttons and simple styling

--- a/index.html
+++ b/index.html
@@ -9,7 +9,36 @@
 <body>
     <main>
         <div id="calculator">
-
+            <div id="screen">
+            </div>
+            <div>
+                <button>Clear</button>
+                <button>Delete</button>
+            </div>
+            <div>
+                <button class="btn-second">7</button>
+                <button class="btn-second">8</button>
+                <button class="btn-second">9</button>
+                <button class="btn-second">/</button>
+            </div>
+            <div>
+                <button class="btn-second">4</button>
+                <button class="btn-second">5</button>
+                <button class="btn-second">6</button>
+                <button class="btn-second">*</button>
+            </div>
+            <div>
+                <button class="btn-second">1</button>
+                <button class="btn-second">2</button>
+                <button class="btn-second">3</button>
+                <button class="btn-second">-</button>
+            </div>
+            <div>
+                <button class="btn-second">.</button>
+                <button class="btn-second">0</button>
+                <button class="btn-second">=</button>
+                <button class="btn-second">+</button>
+            </div>
         </div>
     </main>
     <footer>
