finish styling setup

--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
     <main>
         <div id="calculator">
             <div id="screen">
+                <div>0</div>
             </div>
             <div>
-                <button>Clear</button>
-                <button>Delete</button>
+                <button class="btn-first">Clear</button>
+                <button class="btn-first">Delete</button>
             </div>
             <div>
                 <button class="btn-second">7</button>
