adding utils with function add, subtract, multiple and divide. define querysectorAll on buttons

--- a/index.html
+++ b/index.html
@@ -13,32 +13,32 @@
                 <div>0</div>
             </div>
             <div>
-                <button class="btn-first">Clear</button>
-                <button class="btn-first">Delete</button>
+                <button value="clear" class="btn-first">Clear</button>
+                <button value="delete" class="btn-first">Delete</button>
             </div>
             <div>
-                <button class="btn-second">7</button>
-                <button class="btn-second">8</button>
-                <button class="btn-second">9</button>
-                <button class="btn-second">/</button>
+                <button value="7" class="btn-second">7</button>
+                <button value="8" class="btn-second">8</button>
+                <button value="9" class="btn-second">9</button>
+                <button value="/" class="btn-second">/</button>
             </div>
             <div>
-                <button class="btn-second">4</button>
-                <button class="btn-second">5</button>
-                <button class="btn-second">6</button>
-                <button class="btn-second">*</button>
+                <button value="4" class="btn-second">4</button>
+                <button value="5" class="btn-second">5</button>
+                <button value="6" class="btn-second">6</button>
+                <button value="*" class="btn-second">*</button>
             </div>
             <div>
-                <button class="btn-second">1</button>
-                <button class="btn-second">2</button>
-                <button class="btn-second">3</button>
-                <button class="btn-second">-</button>
+                <button value="1" class="btn-second">1</button>
+                <button value="2" class="btn-second">2</button>
+                <button value="3" class="btn-second">3</button>
+                <button value="-" class="btn-second">-</button>
             </div>
             <div>
-                <button class="btn-second">.</button>
-                <button class="btn-second">0</button>
-                <button class="btn-second">=</button>
-                <button class="btn-second">+</button>
+                <button value="." class="btn-second">.</button>
+                <button value="0" class="btn-second">0</button>
+                <button value="=" class="btn-second">=</button>
+                <button value="+" class="btn-second">+</button>
             </div>
         </div>
     </main>
