--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <title>Calcultator</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="script.js" defer></script>
+    <script type="module" src="script.js" defer></script>
 </head>
 <body>
     <main>
         <div id="calculator">
             <div id="screen">
-                <div>0</div>
+                <div></div>
             </div>
             <div>
                 <button value="clear" class="btn-first">Clear</button>
