fix deletebutton, when inputValue string length is zero, show zero on screen

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <main>
         <div id="calculator">
             <div id="screen">
-                <div></div>
+                <div>0</div>
             </div>
             <div>
                 <button value="clear" class="btn-first">Clear</button>
