adding target blank to footer link

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
     </main>
     <footer>
-        <p>2024 Copyright by <a href="https://www.fmpberger.com">fmpberger</a></p>
+        <p>2024 Copyright by <a href="https://www.fmpberger.com" target="_blank">fmpberger</a></p>
     </footer>
 </body>
 </html>
